[package]
name = "simple-rest-one"
version = "0.1.0"
authors = ["Robin van Leeuwen <robin@mintlab.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
uuid = { versin = "0.8.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
actix-web = "3.0.0-beta.1"
actix-rt = "1.1.1"
serde_json = "1.0.56"
serde = "1.0.114"
futures = "0.3.5"
